# mailmerge

./: Cargo.toml  README.md
src/: main.rs
templates/: address.html  postcard.html  postcards.html
