[package]
name = "mailmerge"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
askama = "0.11.1"
clap = "3.0.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
wkhtmltopdf = "0.4.0"
